# labyda

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  combine_code.bat  combined_project_code.txt  config.example.json  config.shadow_sports.json  docker-compose.yml  latest_requirements.txt  pyproject.toml
.github/workflows/: ci.yml  live-schema-contracts.yml
migrations/: env.py
migrations/versions/: 0001_production_state.py  0002_redemption_intents.py
ops/: POSTGRES_BACKUP_RESTORE.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_RUNBOOK.md  alertmanager.example.yml  configure_e2_micro.sh  deploy_compose.sh  deploy_systemd.sh  health_watchdog.sh  install_systemd.sh  postgres_backup.sh  postgres_restore_drill.sh  postgresql-e2-micro.conf  prometheus-alerts.yml  prometheus.yml  shadow_smoke.sh  spot_preemption_watch.sh
ops/gcp/: README.md  main.tf  outputs.tf  startup.sh  variables.tf
ops/systemd/: arbitrage-backup.service  arbitrage-backup.timer  arbitrage-engine.service  arbitrage-preemption.service  arbitrage-watchdog.service  arbitrage-watchdog.timer  arbitrage.env.example
scripts/: live_smoke_myriad.py  live_smoke_polymarket.py
src/arbitrage_engine/: __init__.py  cli.py  conditional_tokens.py  config.py  database.py  discovery_cpu.py  discovery_lifecycle.py  engine.py  execution.py  http.py  logging_config.py  main.py  market_discovery.py  market_mapping.py  matcher.py  models.py  myriad_discovery.py  observability.py  position_manager.py  positions.py  predict_fun_discovery.py  quant.py  rebalancer.py  reconciliation.py  risk.py  settlement.py  telegram.py
src/arbitrage_engine/connectors/: __init__.py  base.py  cefi.py  myriad.py  polymarket.py  predict_fun.py  web3_base.py
src/arbitrage_engine/utils/: ids.py  math.py
tests/: test_cli.py  test_config.py  test_database_integration.py  test_database_schema.py  test_discovery_lifecycle.py  test_execution.py  test_live_schema_contracts.py  test_logging_config.py  test_market_discovery.py  test_market_mapping.py  test_matcher.py  test_myriad.py  test_myriad_discovery.py  test_observability.py  test_polymarket_ws.py  test_positions.py  test_predict_fun.py  test_predict_fun_discovery.py  test_quant.py  test_reconciliation.py  test_risk.py  test_scan_all_runtime.py  test_settlement.py  test_telegram.py  test_volume_filter.py  test_web3_base.py  test_web3_connectors.py  test_websocket_reconnect.py
