[project]
name = "hft-crypto-arbitrage-engine"
version = "0.1.0"
description = "Async Polymarket, Predict.fun, and Myriad Markets binary prediction arbitrage engine"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiohttp>=3.9",
  "orjson>=3.10",
  "python-dotenv>=1.0",
  "py-clob-client-v2>=0.1",
  "eth-account>=0.11",
  "web3>=6.0",
  "predict-sdk>=0.0.20",
  "SQLAlchemy[asyncio]>=2.0.36,<2.1",
  "asyncpg>=0.30,<0.31",
  "alembic>=1.14,<1.15",
  "prometheus-client>=0.21,<0.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.8",
  "ruff>=0.9,<1",
  "pip-audit>=2.7,<3",
]

[project.scripts]
arbitrage-engine = "arbitrage_engine.main:main"
arbitrage-admin = "arbitrage_engine.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["UP042"]
